# QuantitativeTrading

./: README.md  pyproject.toml
12. Regression/: Regression with two stocks.ipynb
13. Time Series Modelling/: ARMA and ARIMA.ipynb
14. Volatility/: rolling_windows.ipynb  rolling_windows_solution.ipynb
15. Pairs Trading & Mean Reversion/: pairs_candidates.ipynb  pairs_candidates_solution.ipynb
Ritvikmath/: ARMA Model.ipynb  Augmented Dickey-Fuller Test.ipynb  GARCH Model.ipynb  GARCH Stock Modeling.ipynb  Gmail API Tutorial.ipynb  Google Vision API.ipynb  Granger Causality.ipynb  Investing.ipynb  MA Model.ipynb  Model Selection.ipynb  SARIMA Model.ipynb  Stock Forecasting.ipynb  Time Series Data.ipynb  VAR Model.ipynb
UdacityProjects/Project 2: Breakout Stratergy/: project_helper.py
models/Autoregression/: Autocorrelation.ipynb  AutocorrelationSin.ipynb  AutocorrelationSinLarge.ipynb
notebooks/: Alpha vantage test.ipynb  AutocorrelationSin.ipynb  Backtesting.ipynb  Backtesting2.ipynb  Backtesting3.ipynb  LogReturns.ipynb  RandomSimulation.ipynb  RankingStocks.ipynb  RankingStocksSarima.ipynb  StocksBackTrading.ipynb  StocksBackTradingShort.ipynb
notebooks/.ipynb_checkpoints/: LogReturns-checkpoint.ipynb
notebooks/pairs-trading-with-ML-master/: Pairs+Trading+with+Machine+Learning.ipynb  scikit-learn-example-stock-market-viz.ipynb
utils/: BacktraderTest.py  Chart_Helper.py  ImportHelper.py  LinearRegressionMetrics.py  OHLC_Helper.py
