[tool.poetry]
name = "quanttrading"
version = "0.1.0"
description = ""
authors = ["Tharshikan <santhar2008@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9"
jupyter = "^1.0.0"
pandas = "^1.4.1"
data-science-types = "^0.2.23"
matplotlib = "^3.5.1"
scipy = "^1.8.0"
ipython = "^8.1.1"
sympy = "^1.10"
nose = "^1.3.7"
statsmodels = "^0.13.2"
seaborn = "^0.11.2"
mpld3 = "^0.5.7"
plotly = "5.6.0"
chart-studio = "^1.1.0"
cufflinks = "^0.17.3"
sklearn = "^0.0"
color = "^0.1"
cvxpy = "^1.2.0"
cycler = "^0.11.0"
pyparsing = "^3.0.8"
colour = "^0.1.5"
yfinance = "^0.1.70"
alpha-vantage = "^2.3.1"
pandas-datareader = "^0.10.0"
pandas-ta = "^0.3.14-beta.0"
TA-Lib = "^0.4.24"
Backtesting = "^0.3.3"
backtrader = "^1.9.76"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

